youfull/objects/My_Business__c.object
<CustomObject>
    <fields>
        <fullName>Qualified_Candidate_Value__c</fullName>
        <formula>IF( $Profile.Name &lt;&gt; &apos;Avon Leader&apos;,

IF(REP_OMS_STUS_CD__c = &apos;-2&apos;, 

IF(Total_Award_Sales__c = 0, 
$Label.ZM_QPA_Not_Started, 
IF(AND(FRST_ORDR_AMT__c &gt; 0, FRST_ORDER_DUE_DT__c &gt; TODAY() ), 
$Label.ZM_QPA_In_Progress, 
$Label.ZM_QPA_Data_Issue) 
), 

IF(REP_OMS_STUS_CD__c = &apos;1&apos;, 
IF (FRST_ORDR_AMT__c &gt;= MRKT_KEY__r.SPONSOR_QLFYING_ORD_AMT__c, 
IF(AND(FRST_ORDR_PD_DT__c != null, FRST_ORDR_PD_DT__c &lt;= FRST_ORDER_DUE_DT__c), 
$Label.ZM_QPA_Yes, 
IF(AND(FRST_ORDR_PD_DT__c != null, FRST_ORDR_PD_DT__c &gt; FRST_ORDER_DUE_DT__c), 
$Label.ZM_QPA_No, 
IF(AND(FRST_ORDR_PD_DT__c = null, FRST_ORDER_DUE_DT__c &gt;= TODAY() ), 
$Label.ZM_QPA_In_Progress, 
IF(AND(FRST_ORDR_PD_DT__c = null, FRST_ORDER_DUE_DT__c &lt; TODAY() ), 
$Label.ZM_QPA_No, 
$Label.ZM_QPA_Data_Issue) 
) 
) 
), 
$Label.ZM_QPA_Data_Issue) , 
IF(FRST_ORDR_AMT__c &lt; MRKT_KEY__r.SPONSOR_QLFYING_ORD_AMT__c , 
IF(FRST_ORDR_PD_DT__c != null, 
$Label.ZM_QPA_No, 
IF(AND(FRST_ORDR_PD_DT__c = null, TODAY() &gt; FRST_ORDER_DUE_DT__c), 
$Label.ZM_QPA_No, 
$Label.ZM_QPA_Data_Issue) 
), 
IF(REP_OMS_STUS_CD__c = &apos;0&apos;, 
$Label.ZM_QPA_Removed_Rep, 
$Label.ZM_QPA_Not_Valid) 
) 
) 
),

IF(REP_OMS_STUS_CD__c = &apos;-2&apos;, 

IF((INVC_AWRD_SLS_AMT__c + SUBMTD_AWRD_SLS_AMT__c) = 0, 
&quot;Not Started&quot;, 
IF(AND(FRST_ORDR_AMT__c &gt; 0, FRST_ORDER_DUE_DT__c &gt; TODAY() ), 
&quot;In Progress&quot;, 
&quot; &quot;) 
), 

IF(REP_OMS_STUS_CD__c = &apos;1&apos;, 
IF (FRST_ORDR_AMT__c &gt;= ORD_HOLD_AMT__c, 
IF(AND(FRST_ORDR_PD_DT__c != null, FRST_ORDR_PD_DT__c &lt;= FRST_ORDER_DUE_DT__c), 
&quot;Yes&quot;, 
IF(AND(FRST_ORDR_PD_DT__c != null, FRST_ORDR_PD_DT__c &gt; FRST_ORDER_DUE_DT__c), 
&quot;No&quot;, 
IF(AND(FRST_ORDR_PD_DT__c = null, FRST_ORDER_DUE_DT__c &gt;= TODAY() ), 
&quot;In Progress&quot;, 
IF(AND(FRST_ORDR_PD_DT__c = null, FRST_ORDER_DUE_DT__c &lt; TODAY() ), 
&quot;No&quot;, 
&quot; &quot;) 
) 
) 
), 
&quot; &quot;) , 
IF(FRST_ORDR_AMT__c &lt; ORD_HOLD_AMT__c, 
IF(FRST_ORDR_PD_DT__c != null, 
&quot;No&quot;, 
IF(AND(FRST_ORDR_PD_DT__c = null, TODAY() &gt; FRST_ORDER_DUE_DT__c), 
&quot;No&quot;, 
&quot; &quot;) 
), 
IF(REP_OMS_STUS_CD__c = &apos;0&apos;, 
&quot;Removed Representative&quot;, 
&quot;Not Valid Recruit or Representative Value&quot;) 
) 
) 
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QPA Status (Do not use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_APPT_CMPGN_NR_NUMBER__c</fullName>
        <description>REP_APPT_CMPGN_NR__c  converted into a number</description>
        <formula>VALUE(REP_APPT_CMPGN_NR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Campaign Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_APPT_CMPGN_NR__c</fullName>
        <label>Appointment Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_INHRTD_IND__c</fullName>
        <label>Inherited Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_OMS_STUS_CD__c</fullName>
        <inlineHelpText>1=Staff, 0=removed, -2=Recruit</inlineHelpText>
        <label>Rep Status (Staff,Removed)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_RMOVL_CMPGN_NR__c</fullName>
        <label>Removal Campaign</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_RNSTMT_CMPGN_NR__c</fullName>
        <label>Reinstatement Campaign</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROLL_UP_CMPGN_CNT__c</fullName>
        <label>Number of Campaign to Roll Up</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSNG_STR_DT__c</fullName>
        <label>Rising Star Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSNG_STR_IND__c</fullName>
        <label>Rising Star Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTURNS_PCT__c</fullName>
        <label>% Returns</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURN_NET_SLS_AMT__c</fullName>
        <label>Return Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Representative_Addition_Type__c</fullName>
        <formula>IF( REP_APPT_CMPGN_NR__c = OPERTNL_CMPGN_NR__c, 

IF( REP_RNSTMT_CMPGN_NR__c = OPERTNL_CMPGN_NR__c, $Label.ZM_Formula_5_Appointment_Reinstatement, $Label.ZM_Formula_1_Appointment) , 

IF(REP_RNSTMT_CMPGN_NR__c = OPERTNL_CMPGN_NR__c, $Label.ZM_Formula_2_Reinstatement, 

IF(AND(LOA_NR__c = 0,REP_APPT_CMPGN_NR__c = NULL), $Label.ZM_Formula_6_Contracted, 

IF(AND(REP_OMS_STUS_CD__c = &apos;1&apos;,INACTV_CMPGN_CNT__c = 2), $Label.ZM_Formula_3_Potential_Removal, $Label.ZM_Formula_4_Unchanged) ) ) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Representative Addition Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAVED_ORD_AMT__c</fullName>
        <label>Saved Order Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLS_BLW_QLFR_IND__c</fullName>
        <label>Personal Volume Under Personal Qualifier</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ZONE_CD__c</fullName>
        <label>Zone</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNT_TO_CLLCTN_IND__c</fullName>
        <label>Sent to Collection Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_AWRD_SLS_AMT__c</fullName>
        <label>SPPY Award Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_CTD_PRSNL_SLS_AMT__c</fullName>
        <label>SPPY CTD Personal Volume</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_CUST_CNT__c</fullName>
        <label>SPPY Customers Served</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_APPT_CNT__c</fullName>
        <label>SPPY Personal Appointments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_QPA_CNT__c</fullName>
        <label>SPPY Qualified Personal Appointments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_QPA_CONVRSN_PCT__c</fullName>
        <formula>100 * (SPPY_GENRTN_1_QPA_CNT__c / SPPY_GENRTN_1_APPT_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPPY Qualified Personal Appointment rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_TITL_LVL_NR__c</fullName>
        <label>SPPY Badge Title (Achieved Title)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_LDR_ERNGS_AMT__c</fullName>
        <label>SPPY Leadership Earnings</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_NET_SLS_AMT__c</fullName>
        <label>SPPY Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_PD_TITL_LVL_NR__c</fullName>
        <label>SPPY Paid Title (Closed Campaign)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_PD_TITL_LVL__c</fullName>
        <label>SPPY Paid Title (Closed Campaign)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_PRSNL_SLS_AMT__c</fullName>
        <label>SPPY Personal Volume</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_RTURNS_PCT__c</fullName>
        <formula>100 * (SPPY_RTURN_NET_SLS_AMT__c / (SPPY_NET_SLS_AMT__c  +  ABS(SPPY_RTURN_NET_SLS_AMT__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPPY % Returns</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>SPPY Return Award Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_RTURN_NET_SLS_AMT__c</fullName>
        <label>SPPY Return Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_TOTAL_ESTMTD_ERNGS__c</fullName>
        <label>SPPY Total earning</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_TOTAL_N_CMPGNS_PV_AMT__c</fullName>
        <label>SPPY Personal Volume in N Campaigns</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_YTD_NET_SLS_AMT__c</fullName>
        <label>SPPY YTD Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_YTD_PRSNL_SLS_AMT__c</fullName>
        <label>SPPY YTD Personal Volume</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUBMTD_AWRD_SLS_AMT__c</fullName>
        <label>Award Sales Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUBMTD_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUBMTD_SLS_AMT__c</fullName>
        <formula>SUBMTD_AWRD_SLS_AMT__c  +  SUBMTD_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Submitted Award Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAR_CMPGN_CNT__c</fullName>
        <label>Leader Title At Risk Campaign Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITL_STUS__c</fullName>
        <formula>IF( $Profile.Name &lt;&gt; &apos;Avon Leader&apos;,

  IF(
  LAST_CMPGN_TAR_IND__c ==  &apos;Y&apos;,$Label.ZM_Title_At_Risk_Exclamation,
       IF(
          LDRSHP_TAR_IND__c == &apos;Y&apos;,$Label.ZM_Title_At_Risk,
          IF(
               RSNG_STR_IND__c == &apos;Y&apos;,$Label.ZM_Title_Rising_Star,
               IF(
                    EXEC_RSNG_STR_IND__c == &apos;Y&apos;,$Label.ZM_Title_Rising_Star,
                 &apos; &apos;)
            )
       )
  ),

  IF(
    LAST_CMPGN_TAR_IND__c == &apos;Y&apos;,&apos;At Risk!&apos;,
    IF(
      LDRSHP_TAR_IND__c == &apos;Y&apos;,&apos;At Risk&apos;,
      IF(
        RSNG_STR_IND__c == &apos;Y&apos;,&apos;Rising Star&apos;,
        IF(
          EXEC_RSNG_STR_IND__c == &apos;Y&apos;,&apos;Rising Star&apos;,
        &apos;&apos;)
      )
    )
  )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_TRCKNG_STUS__c</fullName>
        <label>Top Seller Tracking Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_ERNGS_AMT__c</fullName>
        <formula>LDR_ERNGS_AMT__c + BONUS_ERNGS_AMT__c +  EXEC_ERNGS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Earning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_ESTMTD_ERNGS__c</fullName>
        <formula>TOTAL_ERNGS_AMT__c + PRSNL_DSCNT_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total and Estimated earning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_N_CMPGNS_PV_AMT__c</fullName>
        <label>Personal Volume in N Campaigns</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_RTURN_AWD_SLS__c</fullName>
        <formula>INVC_RTURN_AWRD_SLS_AMT__c + SUBMTD_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Returns</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRNDSTTR_IND__c</fullName>
        <label>Trendsetter Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTL_PAST_6_CMPGN_SLS_AMT__c</fullName>
        <formula>Total_Award_Sales__c + PC1_INVC_AWRD_SLS_AMT__c + PC2_INVC_AWRD_SLS_AMT__c + PC3_INVC_AWRD_SLS_AMT__c + PC4_INVC_AWRD_SLS_AMT__c + PC5_INVC_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOA 0-6 Personal Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Award_Sales__c</fullName>
        <formula>INVC_AWRD_SLS_AMT__c + SUBMTD_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Camp. Personal Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPLN_ACCT_KEY__c</fullName>
        <label>Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Personal_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPLN_ACCT_NR__c</fullName>
        <label>Sponsor / Direct Upline</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPLN_FULL_NAME__c</fullName>
        <label>Sponsor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPLN_NAME_2__c</fullName>
        <formula>UPLN_FULL_NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upline/Sponsor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPLN_SLS_ZONE_CD__c</fullName>
        <label>Sponsor Zone</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upline_Sponsor_Last_First_Name__c</fullName>
        <formula>UPLN_ACCT_KEY__r.Last_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upline Sponsor Last, First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upline_Sponsor_Text__c</fullName>
        <formula>trim(UPLN_ACCT_KEY__r.FirstName &amp; &quot; &quot; &amp; UPLN_ACCT_KEY__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upline Sponsor (Do not use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upline_Sponsor__c</fullName>
        <formula>HYPERLINK(&quot;javascript:parent.top.location.replace(&apos;/&quot;&amp; UPLN_ACCT_KEY__c &amp;&quot;&apos;);&quot;, IMAGE(&quot;/resource/CoachRecordIcon&quot;, &quot;UPLN_ACCT_KEY__r.FirstName  UPLN_ACCT_KEY__r.LastName&quot;),&quot;_self alt=&apos;UPLN_ACCT_KEY__r.FirstName  UPLN_ACCT_KEY__r.LastName&apos;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upline/Sponsor (Do not use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_NET_SLS_AMT__c</fullName>
        <label>YTD Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_PRSNL_SLS_AMT__c</fullName>
        <label>YTD Personal Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZONE_GROUP__c</fullName>
        <formula>SLS_ZONE_CD__c + &quot;;All&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZONE_MGR_NAME__c</fullName>
        <label>Zone Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Personal Performance(DO NOT USE)</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>